# brass_gazebo_battery

./: .gitignore  CMakeLists.txt  README.md  battery_demo.world  battery_discharge.cpp  battery_discharge.h  package.xml
src/: ROS_debugging.h  battery_consumer.cpp  battery_consumer.hh  battery_discharge.cpp  battery_discharge.h  battery_discharge.hh
test/: battery_demo.world
test/launch/: cp1-base-test.launch
test/tmp/cp-gazebo-p2/: .dockerignore  Dockerfile  README.md  entrypoint.sh  ex_config.json
test/tmp/cp-gazebo-p2/cp_gazebo/: CMakeLists.txt  brass_cpu_monitor.py  package.xml  tf_broadcaster.py
test/tmp/cp-gazebo-p2/cp_gazebo/instructions/: c1_to_c2.ig  c1_to_c2.json  c1_to_c3.ig  c1_to_c3.json  c1_to_c4.ig  c1_to_c4.json  c1_to_l1.json  c1_to_l2.json  c1_to_l3.json  c1_to_l4.json  c1_to_l5.ig  c1_to_l5.json  c1_to_l6.ig  c1_to_l6.json  c1_to_l7.ig  c1_to_l7.json  c1_to_ls.ig  c1_to_ls.json  c2_to_c1.ig  c2_to_c1.json  c2_to_c3.ig  c2_to_c3.json  c2_to_c4.ig  c2_to_c4.json  c2_to_l1.ig  c2_to_l1.json  c2_to_l2.json  c2_to_l3.json  c2_to_l4.ig  c2_to_l4.json  c2_to_l5.ig  c2_to_l5.json  c2_to_l6.ig  c2_to_l6.json  c2_to_l7.ig  c2_to_l7.json  c2_to_ls.ig  c2_to_ls.json  c3_to_c1.ig  c3_to_c1.json  (+184 more)
test/tmp/cp-gazebo-p2/cp_gazebo/launch/: cp1-base-test.launch  cp1-displ.launch  cp1-nomovebase.launch  cp1-woig.launch  cp1.launch  cp2.launch  demo1.launch  view_navigation.launch  wean-hall.launch
test/tmp/cp-gazebo-p2/cp_gazebo/maps/: Wean-entire-floor4.pgm  Wean-entire-floor4.yaml
test/worlds/: battery_demo.world  p2-cp1.world
(+29 files in other folders)
